--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ MONGODB_URI="mongodb+srv://Apiuser:Api12345@cluster0.thbvilq.mongodb.net/placeme
 PORT="3000"
 APP_ID="f129bc8c"
 APP_KEY="41eb4eb08435b1ed170fc0d7987ab22c"
-APP_PASSWORD="emuoriunwvlsswde"
-EMAIL_USER="myplacementcell.jobs@gmail.com"
+APP_PASSWORD="hewxnrultqejiqhj"
+EMAIL_USER="xlncbhubaneswar@gmail.com"
